# qpu-estimator

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
docs/: qpu-estimator-docs.tex
src/qpu_estimator/: __init__.py  analyzer.py  cli.py  dashboard.py  estimator.py  export.py  models.py  noise_model.py  orchestrator.py  plugin.py  profiler.py  qml_estimator.py  shot_optimizer.py  training_time_estimator.py  transpiler.py
tests/: test_mvp.py
