[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qpu-estimator"
version = "0.1.0"
description = "Estimate IBM Quantum hardware resource usage from quantum circuits"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Daniel Martín Pérez", email = "danimap27@gmail.com"}
]
keywords = ["quantum", "qiskit", "ibm", "qpu", "estimation", "qml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qiskit>=1.0",
    "qiskit-ibm-runtime>=0.25",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
qpu-estimate = "qpu_estimator.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
